--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // Retrofit //
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+
+    // Retrofit //
+    // Glide //
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
+    // Glide //
+
 }
