--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,10 @@ dependencies {
 
     // Retrofit //
     implementation 'com.google.code.gson:gson:2.8.5'
-
-
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     // Retrofit //
+
     // Glide //
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
