--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
