--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.tnis.tngpworldcup"
-        minSdkVersion 26
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //  CardView //
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
 
     // Retrofit //
     implementation 'com.google.code.gson:gson:2.8.5'
