Add Basic UI Test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,15 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Retrofit //
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    // Retrofit //
 
     // Glide //
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
-    // Glide //
 
     // Circle ImageView //
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -49,4 +45,13 @@ dependencies {
 
     //  CardView //
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    // UI Test //
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.0.2"
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation "org.mockito:mockito-android:2.18.3"
+    androidTestImplementation 'junit:junit:4.12'
 }
